deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-quarkus-jvm
    app.kubernetes.io/component: hello-quarkus-jvm
    app.kubernetes.io/instance: hello-quarkus-jvm
  name: hello-quarkus-jvm
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: hello-quarkus-jvm
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: hello-quarkus-jvm
    spec:
      containers:
      - image: quay.io/tprinz/hello-quarkus-jvm@sha256:405b4cb093c4570b40c8be60108c42e055e0de3d2212be4073e76f9e006dd423
        imagePullPolicy: IfNotPresent
        name: hello-quarkus-jvm
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
