service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-quarkus-jvm
    app.kubernetes.io/component: hello-quarkus-jvm
    app.kubernetes.io/instance: hello-quarkus-jvm
  name: hello-quarkus-jvm
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: hello-quarkus-jvm
  sessionAffinity: None
  type: ClusterIP
