route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-quarkus-jvm
    app.kubernetes.io/component: hello-quarkus-jvm
    app.kubernetes.io/instance: hello-quarkus-jvm
  name: hello-quarkus-jvm
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-quarkus-jvm
    weight: 100
  wildcardPolicy: None
